Functional Sprite System: 	Add sprite manager(The Code Is A Mess For While). 	Add a sprite test(ignore the meme).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,15 @@ name = "fernir"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-gl = "0.14.0"
+gl = "0.14"
+
+[dependencies.image]
+version = "0.23"
+default-features = false
+features = ["png", "jpeg", "gif"]
+
 [dependencies.sdl2]
 version = "0.35.1"
 default-features = false
+features = ["unsafe_textures"]
