--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-log = "0.4"
-ggez = "0.7"
+env_logger = "0.9.0"
+ggez = "0.7.0"
+hecs = "0.7.5"
+log = "0.4.14"
+mint = "0.5.8"
